<resources>
    <string name="app_name">project</string>
    <string name="user_name">User Name</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_nameS">User name</string>
    <string name="passwordS">Password</string>
    <string name="nameS">Name</string>
    <string name="sign_up_Button">Sign up</string>
    <string name="sign_up_s">Sign Up</string>
    <string name="data">TextView</string>
    <string name="date">14-12-2018</string>
    <string name="addButton">+</string>
    <string name="add">Save</string>
    <string name="time">TextView</string>
    <string name="timetext">TextView</string>
    <string name="dateText">TextView</string>
    <string name="title">Title</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="reminder">reminder</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="times">Due time:</string>
    <string name="dates">Due Date:</string>
    <string name="remind_me_on">Remind me on</string>
    <string name="edit">Edit</string>
    <string name="usman"></string>
    <string name="delete">Delete</string>
    <string name="delete1">Delete</string>
    <string name="stop">Stop</string>
    <string name="switchs">Switch</string>
</resources>
